[package]
name = "icinga2ctl"
version = "1.0.0-20201207"
authors = ["Andreas Maus <maus@badphish.ypbind.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
getopts = "0.2"
reqwest = "0.10"
rust-ini = "0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple-error = "0.2"
uuid = { version = "0.8", features = ["v4"] }

